Prevent publish button from wrapping in Firefox/Ubuntu
Without "Arial" in the list, Firefox used a wide sans serif font that
caused the close and publish button in the editor to become so wide
that they no longer fit in one line.

--- a/app/assets/stylesheets/pageflow/editor/base.scss
+++ b/app/assets/stylesheets/pageflow/editor/base.scss
@@ -24,7 +24,7 @@
   @import "./change_theme";
   @extend %pageflow-ui;
 
-  font-family: Helvetica, "Sans-Serif";
+  font-family: Helvetica, Arial, "Sans-Serif";
   font-size: 13px;
 
   padding: 0;
