--- a/app/assets/stylesheets/pageflow/editor/sidebar_footer.scss
+++ b/app/assets/stylesheets/pageflow/editor/sidebar_footer.scss
@@ -4,7 +4,7 @@
   right: 0;
   left: 0;
 
-  font-family: Helvetica, "Sans-Serif";
+  font-family: Helvetica, Arial, "Sans-Serif";
   font-size: 13px;
 
   border-top: solid 1px #aaa;
